[DOC,BE] Swagger Docs for API Get All History, Hard Delete History By Id
Add Pagination for Get All History
